--- a/CompletionistPrototype.csproj
+++ b/CompletionistPrototype.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collectible.cs" />
+    <Compile Include="EldenRing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EldenRing.Designer.cs">
+      <DependentUpon>EldenRing.cs</DependentUpon>
+    </Compile>
     <Compile Include="Game.cs" />
     <Compile Include="Games.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -72,6 +79,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EldenRing.resx">
+      <DependentUpon>EldenRing.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -116,7 +126,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="EldenRing.txt" />
     <Content Include="games.txt" />
+    <None Include="Resources\placeholder.jpeg" />
     <None Include="Resources\boxartdarksouls.jpg" />
     <None Include="Resources\wowboxart.jpeg" />
     <None Include="Resources\boxartEldenring.jpg" />
